--- a/PHQ9.html
+++ b/PHQ9.html
@@ -54,7 +54,7 @@
 <body>
 
     <header>
-        <h1>Kuesioner PHQ-9</h1>
+        <h1>Soal Selidik PHQ-9</h1>
         <p>Soal Selidik Kesihatan Pesakit-9 (PHQ-9) adalah alat penilaian kendiri untuk menyaring, mendiagnosis, memantau, dan mengukur tahap kemurungan.</p>
     </header>
 
