--- a/PHQ9.html
+++ b/PHQ9.html
@@ -61,63 +61,63 @@
     <main class="questionnaire">
         <form id="phq9-form">
             <div class="question">
-                <label>1. Kurang minat atau keseronokan dalam melakukan perkara?</label>
+                <label>1. Kurang berminat atau keseronokan dalam melakukan sesuatu perkara.</label>
                 <input type="radio" name="q1" value="0"> Tidak sama sekali
                 <input type="radio" name="q1" value="1"> Beberapa hari
                 <input type="radio" name="q1" value="2"> Lebih separuh hari
                 <input type="radio" name="q1" value="3"> Hampir setiap hari
             </div>
             <div class="question">
-                <label>2. Berasa murung, tertekan, atau putus asa?</label>
+                <label>2. Rasa sedih,tidak gembira atau putus asa.</label>
                 <input type="radio" name="q2" value="0"> Tidak sama sekali
                 <input type="radio" name="q2" value="1"> Beberapa hari
                 <input type="radio" name="q2" value="2"> Lebih separuh hari
                 <input type="radio" name="q2" value="3"> Hampir setiap hari
             </div>
             <div class="question">
-                <label>3. Sukar tidur atau tidur terlalu banyak?</label>
+                <label>3. Masalah untuk tidur nyenyak atau tidur berlebihan.</label>
                 <input type="radio" name="q3" value="0"> Tidak sama sekali
                 <input type="radio" name="q3" value="1"> Beberapa hari
                 <input type="radio" name="q3" value="2"> Lebih separuh hari
                 <input type="radio" name="q3" value="3"> Hampir setiap hari
             </div>
             <div class="question">
-                <label>4. Rasa letih atau kurang tenaga?</label>
+                <label>4. Rasa letih atau mempunyai sedikit tenaga.</label>
                 <input type="radio" name="q4" value="0"> Tidak sama sekali
                 <input type="radio" name="q4" value="1"> Beberapa hari
                 <input type="radio" name="q4" value="2"> Lebih separuh hari
                 <input type="radio" name="q4" value="3"> Hampir setiap hari
             </div>
             <div class="question">
-                <label>5. Hilang selera makan atau makan berlebihan?</label>
+                <label>5. Kurang selera atau makan berlebihan.</label>
                 <input type="radio" name="q5" value="0"> Tidak sama sekali
                 <input type="radio" name="q5" value="1"> Beberapa hari
                 <input type="radio" name="q5" value="2"> Lebih separuh hari
                 <input type="radio" name="q5" value="3"> Hampir setiap hari
             </div>
             <div class="question">
-                <label>6. Rasa tidak berharga atau gagal?</label>
+                <label>6. Rasa buruk mengenai diri anda-atau anda seorang yang gagal atau anda telah menyebabkan diri anda atau keluarga anda kecewa.</label>
                 <input type="radio" name="q6" value="0"> Tidak sama sekali
                 <input type="radio" name="q6" value="1"> Beberapa hari
                 <input type="radio" name="q6" value="2"> Lebih separuh hari
                 <input type="radio" name="q6" value="3"> Hampir setiap hari
             </div>
             <div class="question">
-                <label>7. Sukar menumpukan perhatian, seperti membaca atau menonton TV?</label>
+                <label>7. Masalah untuk menumpukan perhatian ke atas sesuatu perkara seperti membaca surat khabar atau menonton televisyen.</label>
                 <input type="radio" name="q7" value="0"> Tidak sama sekali
                 <input type="radio" name="q7" value="1"> Beberapa hari
                 <input type="radio" name="q7" value="2"> Lebih separuh hari
                 <input type="radio" name="q7" value="3"> Hampir setiap hari
             </div>
             <div class="question">
-                <label>8. Bergerak atau bercakap dengan sangat perlahan atau terlalu gelisah?</label>
+                <label>8. Bergerak atau bercakap terlalu perlahan sehinggakan orang lain perasan?Atau sebaliknya-menjadi sangat resah atau gelisah sehinggakan anda telah bergerak dengan banyak daripada biasa.</label>
                 <input type="radio" name="q8" value="0"> Tidak sama sekali
                 <input type="radio" name="q8" value="1"> Beberapa hari
                 <input type="radio" name="q8" value="2"> Lebih separuh hari
                 <input type="radio" name="q8" value="3"> Hampir setiap hari
             </div>
             <div class="question">
-                <label>9. Fikiran bahawa anda lebih baik mati atau mencederakan diri sendiri?</label>
+                <label>9. Memikirkan adalah lebih baik saja jika anda mati atau mencederakan diri anda dalam beberapa cara.</label>
                 <input type="radio" name="q9" value="0"> Tidak sama sekali
                 <input type="radio" name="q9" value="1"> Beberapa hari
                 <input type="radio" name="q9" value="2"> Lebih separuh hari
