--- a/PHQ9.html
+++ b/PHQ9.html
@@ -96,7 +96,7 @@
             });
             
             if (!allAnswered) {
-                document.getElementById("errorMessage").innerText = "Please answer all questions before calculating scores.";
+                document.getElementById("errorMessage").innerText = "Sila jawab semua soalan terlebih dahulu.";
                 return;
             }
             document.getElementById("errorMessage").innerText = "";
