--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-image: url('https://source.unsplash.com/1600x900/?psychology,wellness');
-            background-size: cover;
-            background-position: center;
+            background-color: #2c3e50;
             text-align: center;
             padding: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
         .container {
             max-width: 800px;
-            margin: auto;
             background: rgba(255, 255, 255, 0.9);
             padding: 20px;
             border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
             position: relative;
         }
         h1 {
@@ -51,26 +52,6 @@
         .dass21 {
             background-color: #4caf50;
         }
-        .sidebar {
-            position: fixed;
-            left: 0;
-            top: 0;
-            height: 100%;
-            width: 200px;
-            background: rgba(0, 0, 0, 0.8);
-            padding-top: 20px;
-        }
-        .sidebar a {
-            display: block;
-            color: white;
-            padding: 15px;
-            text-decoration: none;
-            font-size: 18px;
-            text-align: left;
-        }
-        .sidebar a:hover {
-            background: #575757;
-        }
         .footer {
             margin-top: 20px;
             font-size: 14px;
@@ -79,13 +60,6 @@
     </style>
 </head>
 <body>
-    <div class="sidebar">
-        <a href="#">🏠 Laman Utama</a>
-        <a href="https://czender78.github.io/Unit-PSk/PHQ9.html">📊 PHQ-9</a>
-        <a href="https://czender78.github.io/Unit-PSk/DASS21.html">🧠 DASS-21</a>
-        <a href="#">📖 Sumber</a>
-        <a href="#">📩 Hubungi Kami</a>
-    </div>
     <div class="container">
         <h1>Selamat Datang ke Unit Psikologi dan Kaunseling, IPG Gaya</h1>
         <p class="description">Terokai alat psikometrik untuk penilaian kesihatan mental dan kesedaran diri.</p>
